--- a/kehadiran/kehadiran.html
+++ b/kehadiran/kehadiran.html
@@ -3,16 +3,16 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="pembayaran.css">
+     <link rel="stylesheet" href="kehadiran.css">
      <title>Document</title>
 </head>
 <body>
          <!-- judul -->
     <div class="judul-halaman">
-     <a href="dashboard.html">
-          <img src="icon-title/back.png" alt="">
+     <a href="../dashboard.html">
+          <img src="/icon-title/back.png" alt="">
      </a>
-     <h1>Pembayaran</h1>
+     <h1>Kehadiran</h1>
    </div>
 </body>
 </html>
