--- a/pengumuman/pengumuman.html
+++ b/pengumuman/pengumuman.html
@@ -9,8 +9,8 @@
 <body>
          <!-- judul -->
     <div class="judul-halaman">
-     <a href="dashboard.html">
-          <img src="icon-title/back.png" alt="">
+     <a href="../dashboard.html">
+          <img src="/icon-title/back.png" alt="">
      </a>
      <h1>Detail Pengumuman</h1>
     </div>
