--- a/dashboard.html
+++ b/dashboard.html
@@ -34,35 +34,35 @@
     <div class="menu">
       <div class="icon">
         <div class="icon-item">
-          <a href="/kehadiran/kehadiran.html">
+          <a href="kehadiran/kehadiran.html">
             <img class="kehadiran" src="icon/kehadiran.png" alt="" />
           </a>
           <p>Kehadiran</p>
         </div>
 
         <div class="icon-item">
-          <a href="/krs/krs.html">
+          <a href="krs/krs.html">
             <img class="krs" src="icon/krs.png" alt="" />
           </a>
           <p>Krs</p>
         </div>
 
         <div class="icon-item">
-          <a href="/khs/khs.html">
+          <a href="khs/khs.html">
             <img class="khs" src="icon/khs.png" alt="" />
           </a>
           <p>Khs</p>
         </div>
 
         <div class="icon-item">
-          <a href="/pembayaran/pembayaran.html">
+          <a href="pembayaran/pembayaran.html">
             <img class="pembayaran" src="icon/pembayaran.png" alt="" />
           </a>
           <p>Pembayaran</p>
         </div>
 
         <div class="icon-item">
-          <a href="/settings/pengaturan.html">
+          <a href="settings/pengaturan.html">
             <img class="pengaturan" src="icon/pengaturan.png" alt="" />
           </a>
           <p>Pengaturan</p>
@@ -76,8 +76,9 @@
 
     <!-- pengumuman -->
     <div class="pengumuman">
-      <a href="/pengumuman/pengumuman.html">Pengambilan Buku Panduan Akademik 2023</a>
+      <a href="pengumuman/pengumuman.html">Pengambilan Buku Panduan Akademik 2023</a>
     </div>
+    
 
     <!-- navigasi -->
     <div class="navigasi">
