memperbaiki icon back pada menu

--- a/krs/krs.html
+++ b/krs/krs.html
@@ -16,7 +16,7 @@
     <!-- judul -->
     <div class="judul-halaman">
       <a href="../dashboard.html">
-        <img src="/icon-title/back.png" alt="" />
+        <img src="icon-title/back.png" alt="" />
       </a>
       <h1>Kartu Rencana Studi</h1>
     </div>
