--- a/pengumuman/pengumuman.html
+++ b/pengumuman/pengumuman.html
@@ -10,7 +10,7 @@
          <!-- judul -->
     <div class="judul-halaman">
      <a href="../dashboard.html">
-          <img src="/icon-title/back.png" alt="">
+          <img src="icon-title/back.png" alt="">
      </a>
      <h1>Detail Pengumuman</h1>
     </div>
