menambahkan icon di users untuk pergi ke profile

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,15 +16,23 @@
     <div class="profile">
       <p>Selamat Datang, Dinusian</p>
       <div class="users">
+        <a href="profile.html">
         <img
           src="image/aku.jpg"
           alt=""
-          onclick="showImagePopup('image/aku.jpg')"
         />
+      </a>
+      <a href="profile.html" style="text-decoration: none;">
         <div class="name">
           <h2>RESTU ARDIANSYAH</h2>
           <p>A11.2023.15194</p>
         </div>
+      </a>
+      <div class="right-icon">
+        <a href="profile.html">
+        <img src="icon/arrow.png" alt="">
+        </a>
+      </div>
       </div>
     </div>
 
