menambahkan fitur absensi

--- a/kehadiran/kehadiran.html
+++ b/kehadiran/kehadiran.html
@@ -14,5 +14,39 @@
      </a>
      <h1>Kehadiran</h1>
    </div>
+
+   <!-- matriks -->
+   <div class="content">
+     <div class="matkul">
+          <div class="matkul-jadwal">
+               <h2>MATRIKS DAN RUANG VEKTOR</h2>
+               <P>SELASA, 09.30-12.00 (H.4.4)</P>
+          </div>
+          <div class="detail">
+               <a href="">
+               <img src="icon-title/right-arrow.png" alt="right">
+               </a>
+          </div>
+     </div>
+     <!-- absensi -->
+     <div class="absensi">
+          <div class="ket">
+               <div class="hadir">
+                    <p>Hadir</p>
+                    <div class="persen">
+                         <p>100%</p>
+                    </div>
+               </div>
+               <div class="presentase">
+                    <p>Presentase</p>
+                    <div class="persen">
+                         <p>100%</p>
+                    </div>
+               </div>
+          </div>
+     </div>
+
+   </div>
+
 </body>
 </html>
