--- a/kehadiran/kehadiran.html
+++ b/kehadiran/kehadiran.html
@@ -1,52 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="kehadiran.css">
-     <title>Document</title>
-</head>
-<body>
-         <!-- judul -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="kehadiran.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- judul -->
     <div class="judul-halaman">
-     <a href="../dashboard.html">
-          <img src="icon-title/back.png" alt="">
-     </a>
-     <h1>Kehadiran</h1>
-   </div>
+      <a href="../dashboard.html">
+        <img src="icon-title/back.png" alt="" />
+      </a>
+      <h1>Kehadiran</h1>
+    </div>
 
-   <!-- matriks -->
-   <div class="content">
+    <!-- matriks -->
+    <div class="content">
+      <div class="matkul">
+        <div class="matkul-jadwal">
+          <h2>MATRIKS DAN RUANG VEKTOR</h2>
+          <p>SELASA, 09.30-12.00 (H.4.4)</p>
+        </div>
+        <div class="detail">
+          <a href="matriks/matriks.html">
+            <img src="icon-title/right-arrow.png" alt="right" />
+          </a>
+        </div>
+      </div>
+      <!-- absensi -->
+      <div class="absensi">
+        <div class="ket">
+          <div class="hadir">
+            <p>Hadir</p>
+            <div class="persen">
+              <p>100%</p>
+            </div>
+          </div>
+          <div class="presentase">
+            <p>Presentase</p>
+            <div class="persen">
+              <p>100%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- orarkom  -->
+    <div class="content">
+      <div class="matkul">
+        <div class="matkul-jadwal">
+          <h2>ORGANISASI DAN ARSITEKTUR KOMPUTER</h2>
+          <p>KAMIS, 09.30-12.00 (H.4.4)</p>
+        </div>
+        <div class="detail">
+          <a href="">
+            <img src="icon-title/right-arrow.png" alt="right" />
+          </a>
+        </div>
+      </div>
+      <!-- absensi -->
+      <div class="absensi">
+        <div class="ket">
+          <div class="hadir">
+            <p>Hadir</p>
+            <div class="persen">
+              <p>Full</p>
+            </div>
+          </div>
+          <div class="presentase">
+            <p>Presentase</p>
+            <div class="persen">
+              <p>100%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- matrmatika diskrit  -->
+    <div class="content">
+      <div class="matkul">
+        <div class="matkul-jadwal">
+          <h2>MATEMATIKA DISKRIT</h2>
+          <p>JUMAT, 09.30-12.00 (H.4.4)</p>
+        </div>
+        <div class="detail">
+          <a href="">
+            <img src="icon-title/right-arrow.png" alt="right" />
+          </a>
+        </div>
+      </div>
+      <!-- absensi -->
+      <div class="absensi">
+        <div class="ket">
+          <div class="hadir">
+            <p>Hadir</p>
+            <div class="persen">
+              <p>Full</p>
+            </div>
+          </div>
+          <div class="presentase">
+            <p>Presentase</p>
+            <div class="persen">
+              <p>100%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- algoritma dan struktur data  -->
+    <div class="content">
+      <div class="matkul">
+        <div class="matkul-jadwal">
+          <h2>ALGORITMA DAN STRUKTUR DATA</h2>
+          <p>JUMAT, 12.30-14.10 (H.3.11)</p>
+        </div>
+        <div class="detail">
+          <a href="">
+            <img src="icon-title/right-arrow.png" alt="right" />
+          </a>
+        </div>
+      </div>
+      <!-- absensi -->
+      <div class="absensi">
+        <div class="ket">
+          <div class="hadir">
+            <p>Hadir</p>
+            <div class="persen">
+              <p>Full</p>
+            </div>
+          </div>
+          <div class="presentase">
+            <p>Presentase</p>
+            <div class="persen">
+              <p>100%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- interaksi manusia dan komputer -->
+    <div class="content">
+      <div class="matkul">
+        <div class="matkul-jadwal">
+          <h2>INTERAKSI MANUSIA DAN KOMPUTER</h2>
+          <p>JUMAT, 12.30-15.00 (H.3.10)</p>
+        </div>
+        <div class="detail">
+          <a href="">
+            <img src="icon-title/right-arrow.png" alt="right" />
+          </a>
+        </div>
+      </div>
+      <!-- absensi -->
+      <div class="absensi">
+        <div class="ket">
+          <div class="hadir">
+            <p>Hadir</p>
+            <div class="persen">
+              <p>Full</p>
+            </div>
+          </div>
+          <div class="presentase">
+            <p>Presentase</p>
+            <div class="persen">
+              <p>100%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+     <!-- pkn -->
+     <div class="content">
+          <div class="matkul">
+            <div class="matkul-jadwal">
+              <h2>PENDIDIKAN PANCASILA</h2>
+              <p>-</p>
+            </div>
+            <div class="detail">
+              <a href="">
+                <img src="icon-title/right-arrow.png" alt="right" />
+              </a>
+            </div>
+          </div>
+          <!-- absensi -->
+          <div class="absensi">
+            <div class="ket">
+              <div class="hadir">
+                <p>Hadir</p>
+                <div class="persen">
+                  <p>Full</p>
+                </div>
+              </div>
+              <div class="presentase">
+                <p>Presentase</p>
+                <div class="persen">
+                  <p>100%</p>
+                </div>
+              </div>
+            </div>
+          </div>
+     </div>
+
+     <!-- dasar kewirausahaan -->
+     <div class="content">
      <div class="matkul">
-          <div class="matkul-jadwal">
-               <h2>MATRIKS DAN RUANG VEKTOR</h2>
-               <P>SELASA, 09.30-12.00 (H.4.4)</P>
-          </div>
-          <div class="detail">
-               <a href="">
-               <img src="icon-title/right-arrow.png" alt="right">
-               </a>
-          </div>
+       <div class="matkul-jadwal">
+         <h2>DASAR KEWIRAUSAHAAN</h2>
+         <p>RABU, 10.20-12.00 (Kulino)</p>
+       </div>
+       <div class="detail">
+         <a href="">
+           <img src="icon-title/right-arrow.png" alt="right" />
+         </a>
+       </div>
      </div>
      <!-- absensi -->
      <div class="absensi">
-          <div class="ket">
-               <div class="hadir">
-                    <p>Hadir</p>
-                    <div class="persen">
-                         <p>100%</p>
-                    </div>
-               </div>
-               <div class="presentase">
-                    <p>Presentase</p>
-                    <div class="persen">
-                         <p>100%</p>
-                    </div>
-               </div>
-          </div>
+       <div class="ket">
+         <div class="hadir">
+           <p>Hadir</p>
+           <div class="persen">
+             <p>Full</p>
+           </div>
+         </div>
+         <div class="presentase">
+           <p>Presentase</p>
+           <div class="persen">
+             <p>100%</p>
+           </div>
+         </div>
+       </div>
+     </div>
      </div>
 
-   </div>
-
-</body>
+  </body>
 </html>
