menambahkan fitur detail kehadiraan

--- a/kehadiran/matriks/matriks.html
+++ b/kehadiran/matriks/matriks.html
@@ -10,10 +10,92 @@
   <body>
     <!-- judul -->
     <div class="judul-halaman">
-     <h1>Detail Kehadiran</h1>
- </div>
- 
+      <h1>Detail Kehadiran</h1>
+    </div>
 
+    <!-- nama matukul --> 
+    <div class="matkul">
+      <h4>MATRIKS DAN RUANG VEKTOR</h4>
+      <p>SELASA, 09.30-12.00 (H.4.4)</p>
+    </div>
+
+    <!-- presentase -->
+    <div class="absensi">
+      <div class="ket">
+        <div class="hadir">
+          <p>Hadir</p>
+          <div class="persen">
+            <p>100%</p>
+          </div>
+        </div>
+        <div class="presentase">
+          <p>Presentase</p>
+          <div class="persen">
+            <p>100%</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- detail absensi -->
+    <div class="cart">
+      <div class="judul">
+        <p>Pertemuan</p>
+        <p>Kehadiran</p>
+      </div>
+      <hr class="tebal-kuning">
+      <!-- 1 -->
+      <div class="keterangan">
+        <div class="date">
+          <p>2024-03-05</p>
+            <div class="pertemuan">
+            <p>Pertemuan ke-1</p>
+            </div>
+        </div>
+        <div class="info">
+          <img src="icon-info/hadir.png" alt="A">
+        </div>
+      </div>
+
+            <!-- 2 -->
+            <div class="keterangan">
+              <div class="date">
+                <p>2024-03-05</p>
+                  <div class="pertemuan">
+                  <p>Pertemuan ke-1</p>
+                  </div>
+              </div>
+              <div class="info">
+                <img src="icon-info/alfa.png" alt="A">
+              </div>
+            </div>
+
+                  <!-- 3 -->
+      <div class="keterangan">
+        <div class="date">
+          <p>2024-03-05</p>
+            <div class="pertemuan">
+            <p>Pertemuan ke-1</p>
+            </div>
+        </div>
+        <div class="info">
+          <img src="icon-info/hadir.png" alt="A">
+        </div>
+      </div>
+
+            <!-- 4 -->
+            <div class="keterangan">
+              <div class="date">
+                <p>2024-03-05</p>
+                  <div class="pertemuan">
+                  <p>Pertemuan ke-1</p>
+                  </div>
+              </div>
+              <div class="info">
+                <img src="icon-info/hadir.png" alt="A">
+              </div>
+            </div>
+    </div>
 
   </body>
 </html>
