menyelesaikan fitur detail absensi

--- a/kehadiran/kehadiran.html
+++ b/kehadiran/kehadiran.html
@@ -55,7 +55,7 @@
           <p>KAMIS, 09.30-12.00 (H.4.4)</p>
         </div>
         <div class="detail">
-          <a href="">
+          <a href="orarkom/orgkom.html">
             <img src="icon-title/right-arrow.png" alt="right" />
           </a>
         </div>
@@ -87,7 +87,7 @@
           <p>JUMAT, 09.30-12.00 (H.4.4)</p>
         </div>
         <div class="detail">
-          <a href="">
+          <a href="diskrit/mtk-diskrit.html">
             <img src="icon-title/right-arrow.png" alt="right" />
           </a>
         </div>
@@ -119,7 +119,7 @@
           <p>JUMAT, 12.30-14.10 (H.3.11)</p>
         </div>
         <div class="detail">
-          <a href="">
+          <a href="aritmatika/algoritma and date structure.html">
             <img src="icon-title/right-arrow.png" alt="right" />
           </a>
         </div>
@@ -151,7 +151,7 @@
           <p>JUMAT, 12.30-15.00 (H.3.10)</p>
         </div>
         <div class="detail">
-          <a href="">
+          <a href="imk/imk.html">
             <img src="icon-title/right-arrow.png" alt="right" />
           </a>
         </div>
@@ -183,7 +183,7 @@
               <p>-</p>
             </div>
             <div class="detail">
-              <a href="">
+              <a href="pkn/penpan.html">
                 <img src="icon-title/right-arrow.png" alt="right" />
               </a>
             </div>
@@ -215,7 +215,7 @@
          <p>RABU, 10.20-12.00 (Kulino)</p>
        </div>
        <div class="detail">
-         <a href="">
+         <a href="dk/daskew.html">
            <img src="icon-title/right-arrow.png" alt="right" />
          </a>
        </div>
