menambahkan fitur settings

--- a/settings/pengaturan.html
+++ b/settings/pengaturan.html
@@ -14,5 +14,18 @@
      </a>
      <h1>Pengaturan</h1>
    </div>
+
+   <div class="reset">
+     <a href="">Ubah Kata Sandi</a>
+   </div>
+
+   <div class="help">
+     <a href="">Pusat Bantuan</a>
+     <a href="">Kontak Narahubung</a>
+     <a href="">Ketentuan dan Kebijakan Privasi</a>
+     <a href="">Info Aplikasi</a>
+   
+</div>
+
 </body>
 </html>
