--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         bottom: 0;
         left: 0;
         border-radius: 25px 25px 0 0;
-        height: 25%;
-        width: 100%;
+        height: 23%;
+        width: auto;
         background-color: white;
         border-top: 1px solid #ccc;
         transition: transform 0.3s ease; /* Efek transisi saat form muncul */
