--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         left: 50%;
         transform: translateX(-50%);
         padding: 15px 30px;
-        background-color: #fccc1e;
+        background-color: #efc956;
         color: white;
         border: none;
         border-radius: 5px;
@@ -136,7 +136,7 @@
       }
 
       .logo {
-        height: 120px;
+        height: 200px;
       }
 
       /* Partikel */
@@ -153,7 +153,7 @@
     <!-- Logo -->
     <div class="logo-container">
       <!-- Logo -->
-      <img src="image/Logo Udinus -.png" alt="Logo" class="logo" />
+      <img src="image/Logo Udinus - Official 02.png" alt="Logo" class="logo" />
       <!-- Text -->
       <p>Universitas Dian Nuaswantoro</p>
     </div>
