--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         bottom: 0;
         left: 0;
         border-radius: 25px 25px 0 0;
-        height: 23%;
-        width: auto;
+        height: 20%;
+        width: 100%;
         background-color: white;
         border-top: 1px solid #ccc;
         transition: transform 0.3s ease; /* Efek transisi saat form muncul */
@@ -59,6 +59,7 @@
         margin-bottom: 10px;
         box-sizing: border-box;
         border: rgba(0, 0, 0, 0.1) solid;
+
         font-size: 14px; /* Ukuran font */
         margin-bottom: 10px; /* Hilangkan margin default */
         font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -107,7 +108,7 @@
         left: 50%;
         transform: translateX(-50%);
         padding: 15px 30px;
-        background-color: #efc956;
+        background-color: #fccc1e;
         color: white;
         border: none;
         border-radius: 5px;
