--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dashboard.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Dashboard</title>
   </head>
   <body>
@@ -17,22 +25,19 @@
       <p>Selamat Datang, Dinusian</p>
       <div class="users">
         <a href="profile.html">
-        <img
-          src="image/aku.jpg"
-          alt=""
-        />
-      </a>
-      <a href="profile.html" style="text-decoration: none;">
-        <div class="name">
-          <h2>RESTU ARDIANSYAH</h2>
-          <p>A11.2023.15194</p>
-        </div>
-      </a>
-      <div class="right-icon">
-        <a href="profile.html">
-        <img src="icon/arrow.png" alt="">
+          <img src="image/aku.jpg" alt="" />
         </a>
-      </div>
+        <a href="profile.html" style="text-decoration: none">
+          <div class="name">
+            <h2>RESTU ARDIANSYAH</h2>
+            <p>A11.2023.15194</p>
+          </div>
+        </a>
+        <div class="right-icon">
+          <a href="profile.html">
+            <img src="icon/arrow.png" alt="" />
+          </a>
+        </div>
       </div>
     </div>
 
@@ -84,9 +89,10 @@
 
     <!-- pengumuman -->
     <div class="pengumuman">
-      <a href="pengumuman/pengumuman.html">Pengambilan Buku Panduan Akademik 2023</a>
+      <a href="pengumuman/pengumuman.html"
+        >Pengambilan Buku Panduan Akademik 2023</a
+      >
     </div>
-    
 
     <!-- navigasi -->
     <div class="navigasi">
