--- a/kehadiran/aritmatika/algoritma and date structure.html
+++ b/kehadiran/aritmatika/algoritma and date structure.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="algoritma and date structure.css" />
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Algoritm</title>
   </head>
 
@@ -13,7 +20,7 @@
       <h1>Detail Kehadiran</h1>
     </div>
 
-    <!-- nama matukul --> 
+    <!-- nama matukul -->
     <div class="matkul">
       <h4>ALGORITMA DAN STRUKTUR DATA</h4>
       <p>JUMSAT, 12.30-14.10 (H.3.11)</p>
@@ -43,72 +50,71 @@
         <p>Pertemuan</p>
         <p>Kehadiran</p>
       </div>
-      <hr class="tebal-kuning">
+      <hr class="tebal-kuning" />
       <!-- 1 -->
       <div class="keterangan">
         <div class="date">
           <p>2024-03-06</p>
-            <div class="pertemuan">
+          <div class="pertemuan">
             <p>Pertemuan ke-1</p>
-            </div>
+          </div>
         </div>
         <div class="info">
-          <img src="icon-info/hadir.png" alt="A">
+          <img src="icon-info/hadir.png" alt="A" />
         </div>
       </div>
 
-            <!-- 2 -->
-            <div class="keterangan">
-              <div class="date">
-                <p>2024-03-08</p>
-                  <div class="pertemuan">
-                  <p>Pertemuan ke-2</p>
-                  </div>
-              </div>
-              <div class="info">
-                <img src="icon-info/alfa.png" alt="A">
-              </div>
-            </div>
+      <!-- 2 -->
+      <div class="keterangan">
+        <div class="date">
+          <p>2024-03-08</p>
+          <div class="pertemuan">
+            <p>Pertemuan ke-2</p>
+          </div>
+        </div>
+        <div class="info">
+          <img src="icon-info/alfa.png" alt="A" />
+        </div>
+      </div>
 
-                  <!-- 3 -->
+      <!-- 3 -->
       <div class="keterangan">
         <div class="date">
           <p>2024-03-15</p>
-            <div class="pertemuan">
+          <div class="pertemuan">
             <p>Pertemuan ke-3</p>
-            </div>
+          </div>
         </div>
         <div class="info">
-          <img src="icon-info/hadir.png" alt="A">
+          <img src="icon-info/hadir.png" alt="A" />
         </div>
       </div>
 
-            <!-- 4 -->
-            <div class="keterangan">
-              <div class="date">
-                <p>2024-03-19</p>
-                  <div class="pertemuan">
-                  <p>Pertemuan ke-4</p>
-                  </div>
-              </div>
-              <div class="info">
-                <img src="icon-info/hadir.png" alt="A">
-              </div>
-            </div>
+      <!-- 4 -->
+      <div class="keterangan">
+        <div class="date">
+          <p>2024-03-19</p>
+          <div class="pertemuan">
+            <p>Pertemuan ke-4</p>
+          </div>
+        </div>
+        <div class="info">
+          <img src="icon-info/hadir.png" alt="A" />
+        </div>
+      </div>
 
-            <!-- 5 -->
-            <div class="keterangan">
-              <div class="date">
-                <p>2024-03-22</p>
-                  <div class="pertemuan">
-                  <p>Pertemuan ke-5</p>
-                  </div>
-              </div>
-              <div class="info">
-                <img src="icon-info/hadir.png" alt="A">
-              </div>
-            </div>
+      <!-- 5 -->
+      <div class="keterangan">
+        <div class="date">
+          <p>2024-03-22</p>
+          <div class="pertemuan">
+            <p>Pertemuan ke-5</p>
+          </div>
+        </div>
+        <div class="info">
+          <img src="icon-info/hadir.png" alt="A" />
+        </div>
+      </div>
     </div>
-
   </body>
 </html>
