--- a/kehadiran/kehadiran.html
+++ b/kehadiran/kehadiran.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="kehadiran.css" />
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -175,69 +182,68 @@
       </div>
     </div>
 
-     <!-- pkn -->
-     <div class="content">
-          <div class="matkul">
-            <div class="matkul-jadwal">
-              <h2>PENDIDIKAN PANCASILA</h2>
-              <p>-</p>
-            </div>
-            <div class="detail">
-              <a href="pkn/penpan.html">
-                <img src="icon-title/right-arrow.png" alt="right" />
-              </a>
-            </div>
-          </div>
-          <!-- absensi -->
-          <div class="absensi">
-            <div class="ket">
-              <div class="hadir">
-                <p>Hadir</p>
-                <div class="persen">
-                  <p>Full</p>
-                </div>
-              </div>
-              <div class="presentase">
-                <p>Presentase</p>
-                <div class="persen">
-                  <p>100%</p>
-                </div>
-              </div>
+    <!-- pkn -->
+    <div class="content">
+      <div class="matkul">
+        <div class="matkul-jadwal">
+          <h2>PENDIDIKAN PANCASILA</h2>
+          <p>-</p>
+        </div>
+        <div class="detail">
+          <a href="pkn/penpan.html">
+            <img src="icon-title/right-arrow.png" alt="right" />
+          </a>
+        </div>
+      </div>
+      <!-- absensi -->
+      <div class="absensi">
+        <div class="ket">
+          <div class="hadir">
+            <p>Hadir</p>
+            <div class="persen">
+              <p>Full</p>
             </div>
           </div>
-     </div>
+          <div class="presentase">
+            <p>Presentase</p>
+            <div class="persen">
+              <p>100%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-     <!-- dasar kewirausahaan -->
-     <div class="content">
-     <div class="matkul">
-       <div class="matkul-jadwal">
-         <h2>DASAR KEWIRAUSAHAAN</h2>
-         <p>RABU, 10.20-12.00 (Kulino)</p>
-       </div>
-       <div class="detail">
-         <a href="dk/daskew.html">
-           <img src="icon-title/right-arrow.png" alt="right" />
-         </a>
-       </div>
-     </div>
-     <!-- absensi -->
-     <div class="absensi">
-       <div class="ket">
-         <div class="hadir">
-           <p>Hadir</p>
-           <div class="persen">
-             <p>Full</p>
-           </div>
-         </div>
-         <div class="presentase">
-           <p>Presentase</p>
-           <div class="persen">
-             <p>100%</p>
-           </div>
-         </div>
-       </div>
-     </div>
-     </div>
-
+    <!-- dasar kewirausahaan -->
+    <div class="content">
+      <div class="matkul">
+        <div class="matkul-jadwal">
+          <h2>DASAR KEWIRAUSAHAAN</h2>
+          <p>RABU, 10.20-12.00 (Kulino)</p>
+        </div>
+        <div class="detail">
+          <a href="dk/daskew.html">
+            <img src="icon-title/right-arrow.png" alt="right" />
+          </a>
+        </div>
+      </div>
+      <!-- absensi -->
+      <div class="absensi">
+        <div class="ket">
+          <div class="hadir">
+            <p>Hadir</p>
+            <div class="persen">
+              <p>Full</p>
+            </div>
+          </div>
+          <div class="presentase">
+            <p>Presentase</p>
+            <div class="persen">
+              <p>100%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
