menyelesaikan fitu pembayaran

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         var password = document.getElementById("password").value;
 
         // Lakukan pengecekan NIM dan password
-        if (nim === "A11.2023.15194" && password === "RESTU.DINUS") {
+        if (nim === "123456789" && password === "NAMAMU") {
           window.location.href = "dashboard.html"; // Redirect ke halaman dashboard.html jika login berhasil
           return false; // Mencegah form submit
         } else {
