--- a/pembayaran/pembayaran.html
+++ b/pembayaran/pembayaran.html
@@ -26,7 +26,9 @@
     <!-- content -->
     <div class="nav">
       <a href="#reguler" class="nav-link" id="nav-reguler">Reguler</a>
-      <a href="#non-reguler" class="nav-link" id="nav-non-reguler">Non-Reguler</a>
+      <a href="#non-reguler" class="nav-link" id="nav-non-reguler"
+        >Non-Reguler</a
+      >
     </div>
 
     <div class="reguler" id="reguler">
@@ -80,10 +82,93 @@
           </div>
         </div>
       </div>
+
+      <!-- status -->
+      <div class="status">
+        <div class="waktu">
+          <p>Status Pembayaran</p>
+          <p>2023-2024 Genap</p>
+        </div>
+        <div class="ket">
+          <p>Belum Lunas</p>
+        </div>
+      </div>
+
+      <!-- metode pembayaran -->
+      <div class="judul-metode">Metode Pembayaran</div>
+      <!-- card 1 -->
+      <div class="card">
+        <div class="id">
+          <div class="item2">
+            <span></span>
+          </div>
+          <div class="item1">
+            <h3>0000 000 0001</h3>
+            <p>RESTU ARDIANSYAH</p>
+          </div>
+        </div>
+        <div class="name">
+          <span></span>
+          <p>Bank Dunia Virtual Account Auto Validasi</p>
+        </div>
+      </div>
+
+      <!-- card 2 -->
+      <div class="card">
+        <div class="id">
+          <div class="item2">
+            <span></span>
+          </div>
+          <div class="item1">
+            <h3>0000 000 0001</h3>
+            <p>RESTU ARDIANSYAH</p>
+          </div>
+        </div>
+        <div class="name">
+          <span></span>
+          <p>Bank Galaksi Virtual Account Auto Validasi</p>
+        </div>
+      </div>
+
+      <!-- card 3 -->
+      <div class="card">
+        <div class="id">
+          <div class="item2">
+            <span></span>
+          </div>
+          <div class="item1">
+            <h3>0000 000 0001</h3>
+            <p>RESTU ARDIANSYAH</p>
+          </div>
+        </div>
+        <div class="name">
+          <span></span>
+          <p>Bank Alam Semesta Virtual Account Auto Validasi H+1</p>
+        </div>
+      </div>
+
+      <!-- panduan -->
+      <div class="panduan">
+        <p>
+          1. Tidak wajib konfirmasi karena akan otomatis terupdate 1x24 jam.
+        </p>
+        <p>
+          2. Pembayaran kuliah reguler hanya dapat di jalankan melalui metode di
+          atas.
+        </p>
+        <hr />
+        <p id="contact">Kontak Pelayanan BIKU UDINUS</p>
+        <div class="contact">
+          <p>Hari : <span style="font-weight: bold"> Senin-Jumat</span></p>
+          <p>Website : <span style="font-weight: bold">-</span></p>
+          <p>Jam : <span style="font-weight: bold">07.00-17.00</span></p>
+          <p>Narahubung:<span style="font-weight: bold">-</span></p>
+        </div>
+      </div>
     </div>
 
     <!-- non reguler -->
-    <div class="reguler" id="non-reguler" style="display: none;">
+    <div class="reguler" id="non-reguler" style="display: none">
       <!-- info pembayarran -->
       <div class="info">
         <p>Informasi tagihan Pembayaran Mahasiswa</p>
