--- a/krs/krs.html
+++ b/krs/krs.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- judul -->
-    <div class="judul-halaman">
+    <div class="judul-halaman" id="home">
       <a href="../dashboard.html">
         <img src="icon-title/back.png" alt="" />
       </a>
@@ -458,5 +458,9 @@
         <!-- Icon untuk tombol -->
       </button>
     </div>
+
+          <!-- to top -->
+          <a href="#home" id="scrollToTop" class="scroll-to-top">&uarr;</a>
+
   </body>
 </html>
