--- a/pembayaran/pembayaran.html
+++ b/pembayaran/pembayaran.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- judul -->
-    <div class="judul-halaman">
+    <div class="judul-halaman" id="home">
       <a href="../dashboard.html">
         <img src="icon-title/back.png" alt="" />
       </a>
@@ -165,6 +165,10 @@
           <p>Narahubung:<span style="font-weight: bold">-</span></p>
         </div>
       </div>
+
+      <!-- to top -->
+      <a href="#home" id="scrollToTop" class="scroll-to-top">&uarr;</a>
+
     </div>
 
     <!-- non reguler -->
