melengkapi halaman khs

--- a/khs/khs.html
+++ b/khs/khs.html
@@ -40,7 +40,7 @@
       <!-- krs smt 1 -->
       <div class="SMT1" style="position: relative">
         <div class="judul-smt-1">
-          <p>KRS 2023-2024 Ganjil</p>
+          <p>KHS 2023-2024 Ganjil</p>
         </div>
         <div id="bg-matkul-1" class="bg-matkul-1" style="display: none">
           <!-- matkul -->
@@ -279,7 +279,7 @@
               </div>
               <div class="N-AKHIR">
                 <p>N.AKHIR</p>
-                <p id="N-AKHIR">81 | AB</p>
+                <p id="N-AKHIR">| AB</p>
               </div>
             </div>
           </div>
@@ -297,6 +297,187 @@
     </div>
 
     <!-- non reguler -->
-    <div class="reguler" id="non-reguler" style="display: none"></div>
+    <div class="reguler" id="non-reguler" style="display: none">
+      <!-- ipk dan sks -->
+      <div class="ipk-sks">
+        <div class="ipk">
+          <p>IP Kumulatif</p>
+          <p id="ipk">3.05</p>
+        </div>
+        <div class="sks">
+          <p>Telah Mengambil</p>
+          <p id="sks">21 SKS</p>
+        </div>
+      </div>
+
+      <!-- total nilai -->
+      <div class="total-nilai">
+        <div class="left">
+          <div class="a">
+            <p>A</p>
+            <div class="jumlah-a">
+              <p>1</p>
+            </div>
+          </div>
+          <div class="a">
+            <p>B</p>
+            <div class="jumlah-b">
+              <p>1</p>
+            </div>
+          </div>
+          <div class="a">
+            <p>C</p>
+            <div class="jumlah-c">
+              <p>1</p>
+            </div>
+          </div>
+          <div class="a-end">
+            <p>E</p>
+            <div class="jumlah-e">
+              <p>0</p>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <div class="a">
+            <p>AB</p>
+            <div class="jumlah-ab">
+              <p>4</p>
+            </div>
+          </div>
+          <div class="a">
+            <p>BC</p>
+            <div class="jumlah-bc">
+              <p>1</p>
+            </div>
+          </div>
+          <div class="a">
+            <p>D</p>
+            <div class="jumlah-d">
+              <p>0</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- DAFTAR NILAI MATKUL -->
+      <div class="daftar-nm">
+        <div class="jd">
+          <p>Daftar Nilai Mata Kuliah</p>
+        </div>
+        <!-- list nilai matkul -->
+        <!-- kalkulus -->
+        <div class="list">
+          <div class="matkul">
+            <p id="nama-matkul">KALKULUS</p>
+            <p id="kode">
+              Kode Mata Kuliah: A11.64101
+              <img src="icon-title/dot.png" alt="" /> 3 SKS
+            </p>
+          </div>
+          <div class="ket-nilai-kuning">
+            <p>C</p>
+          </div>
+        </div>
+
+        <!-- daspro -->
+        <div class="list">
+          <div class="matkul">
+            <p id="nama-matkul">DASAR PEMROGRAMAN</p>
+            <p id="kode">
+              Kode Mata Kuliah: A11.64103
+              <img src="icon-title/dot.png" alt="" /> 4 SKS
+            </p>
+          </div>
+          <div class="ket-nilai-kuning">
+            <p>BC</p>
+          </div>
+        </div>
+
+        <!-- fisika -->
+        <div class="list">
+          <div class="matkul">
+            <p id="nama-matkul">FISIKA</p>
+            <p id="kode">
+              Kode Mata Kuliah: A11.64102
+              <img src="icon-title/dot.png" alt="" /> 4 SKS
+            </p>
+          </div>
+          <div class="ket-nilai-hijau">
+            <p>B</p>
+          </div>
+        </div>
+
+        <!-- pai -->
+        <div class="list">
+          <div class="matkul">
+            <p id="nama-matkul">PENDIDIKAN AGAMA ISLAM</p>
+            <p id="kode">
+              Kode Mata Kuliah: N2017051
+              <img src="icon-title/dot.png" alt="" /> 2 SKS
+            </p>
+          </div>
+          <div class="ket-nilai-hijau">
+            <p>AB</p>
+          </div>
+        </div>
+
+        <!-- PENGANTAR TEKNOLOGI INFORMASI -->
+        <div class="list">
+          <div class="matkul">
+            <p id="nama-matkul">PENGANTAR TEKNOLOGI INFORMASI</p>
+            <p id="kode">
+              Kode Mata Kuliah: U201704
+              <img src="icon-title/dot.png" alt="" /> 2 SKS
+            </p>
+          </div>
+          <div class="ket-nilai-hijau">
+            <p>AB</p>
+          </div>
+        </div>
+
+        <!-- KETERAMPILAN INTERPERSONAL -->
+        <div class="list">
+          <div class="matkul">
+            <p id="nama-matkul">KETERAMPILAN INTERPERSONAL</p>
+            <p id="kode">
+              Kode Mata Kuliah: A11.64104
+              <img src="icon-title/dot.png" alt="" /> 2 SKS
+            </p>
+          </div>
+          <div class="ket-nilai-hijau">
+            <p>AB</p>
+          </div>
+        </div>
+
+        <!-- DASAR KOMPUTASI -->
+        <div class="list">
+          <div class="matkul">
+            <p id="nama-matkul">DASAR KOMPUTASI</p>
+            <p id="kode">
+              Kode Mata Kuliah: AF201704
+              <img src="icon-title/dot.png" alt="" /> 2 SKS
+            </p>
+          </div>
+          <div class="ket-nilai-hijau">
+            <p>AB</p>
+          </div>
+        </div>
+
+        <!-- BAHASA INDONESIA -->
+        <div class="list">
+          <div class="matkul">
+            <p id="nama-matkul">BAHASA INDONESIA</p>
+            <p id="kode">
+              Kode Mata Kuliah: N201701
+              <img src="icon-title/dot.png" alt="" /> 2 SKS
+            </p>
+          </div>
+          <div class="ket-nilai-hijau">
+            <p>A</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
